infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studmanager
spec:
  selector:
    app: studmanager
  ports:
    - port: 80
      targetPort: 3001
